Lesson 3-1 - Added Storage setup for tenants

--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,8 @@
 	
     {% include 'includes/messages.html' %}
 
-    {% include 'includes/header.html' %}
+    {% load header %}
+    {% header_view request %}
 
     {% block layout %}
     {% endblock %}
